--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   
     <!-- stylesheet css -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- navbar -->
@@ -142,7 +142,7 @@
 <!-- Bootstrap core JavaScripts -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script>
-<script type="text/javascript" src="javascript/app.js"></script>
+<script type="text/javascript" src="app.js"></script>
 
 </body>
 </html>
